[metadata]
name = buffalogs
version = 2.6.0
description = A Django app to detect anomaly logins.
long_description = file: README.rst
author = Lorena Goldoni
license = Apache-2.0
classifiers =
    Framework :: Django
    License :: OSI Approved :: Apache-2.0 Licence
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development
[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    celery>=5.5.3
    Django>=4.2.22
    djangorestframework>=3.16
    djangorestframework-simplejwt>=5.4.0
    django-cors-headers>=4.7.0
    elasticsearch>=7.17.12
    elasticsearch-dsl>=7.4.1
    geopy>=2.4.1
    psycopg>=3.2.9
    psycopg-binary>=3.1.12
    pygal>=3.0.0
    pygal-maps-world>=1.0.2
    python-dateutil>=2.9.0
    ua-parser>=1.0.1
