[metadata]
name = buffalogs
version = 2.11.0
description = A Django app to detect anomaly logins.
long_description = file: README.rst
author = Lorena Goldoni
license = Apache-2.0
classifiers =
    Framework :: Django :: 5.2
    Operating System :: OS Independent
    Programming Language :: Python :: 3.12
    Topic :: Software Development
[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =2.2.1
    backoff>=2.2.1
    celery>=5.5.3
    Django>=5.2.5
    djangorestframework>=3.16
    djangorestframework-simplejwt>=5.5.1
    django-cors-headers>=4.8.0
    elasticsearch>=9.1
    geopy>=2.4.1
    Jinja2>=3.1.6
    psycopg>=3.2.9
    psycopg[binary]>=3.2.9
    pygal>=3.0.0
    pygal_maps_world>=1.0.2
    python-dateutil>=2.9.0
    requests>=2.32.5
    ua-parser>=1.0.1
    uwsgi>=2.0.30
